apps/wallabag/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #TODO: hide the ip like a secret
    external-dns.alpha.kubernetes.io/target: "188.148.187.53"
    external-dns.alpha.kubernetes.io/hostname: wallabag-qa.lab.aminrj.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wallabag-qa.lab.aminrj.com
      secretName: wallabag-tls
  rules:
    - host: wallabag-qa.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag-qa
                port:
                  number: 80
